# termidle

./: CMakeLists.txt  main.c
include/: common.h  terminalManager.h
source/: terminalManager.c
